deployment/with-docker/devops-build-pipeline/kube-configs/staging/front-end-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app-svc
  namespace: jsva-staging
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    name: front-end-app
