deployment/with-docker/devops-build-pipeline/kube-configs/staging/ingress-routing.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-staging-svc
  namespace: nginx-ingress
spec:
  loadBalancerIP: 13.92.61.73
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: nginx-ingress
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jfrapp-ingress
  namespace: staging
spec:
  rules:
    - host: jfrapp-staging.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: back-end-api-svc
              servicePort: 8080
          - path: /
            backend:
              serviceName: front-end-app-svc
              servicePort: 8080
